# stocks

./: .flake8  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  res.json  run.py
src/: api.py  db.py  resources.py  tables.py  utils.py
src/model/: alembic.ini
src/model/stock/versions/: 3c7dd393b9dd_create_schema.py
