[tool.poetry]
name = "cli_application"
version = "0.1.0"
description = ""
authors = ["Daniele Iervolino <raiervol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
tabulate="^0.8.7"
retry = "^0.9.2"
typer = "^0.3.2"
plotille = "^3.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pdbpp = "^0.10.2"
pytest = "^6.0.2"
ipython = ">=7.30"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
